# rp2040-boot2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  check-blobs.sh
.github/workflows/: ci.yml
rp2040-boot2-rs/: Cargo.toml
rp2040-boot2-rs/src/: .gitignore  lib.rs
src/: addressmap.h  boot2_at25sf128a.S  boot2_gd25q64cs.S  boot2_ram.S  boot2_ram_memcpy.S  boot2_w25q080.S  exit_from_boot2.S  lib.rs
src/include/pico/: config.h  config_autogen.h
update-rp2040-boot2/: Cargo.toml
update-rp2040-boot2/src/: asm_helper.S  boot2_w25q080.S  main.rs  platform_defs.h
