[package]
name = "rp2040-boot2"
version = "0.1.2"
authors = ["The rp-rs Team"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/rp-rs/rp2040-boot2-rs"
description = "Raspberry Pi RP2040 SoC second stage bootloader."

[dependencies]

[build-dependencies]
crc-any = "2.3"

[features]
ram_memcpy = []
at25sf128a = []
w25q080 = []
