[package]
name = "rp2040-boot2"
version = "0.1.2"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/rp-rs/rp2040-boot2-rs"
description = "Raspberry Pi RP2040 SoC second stage bootloader."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
